k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bibliotheque-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bibliotheque-backend
  template:
    metadata:
      labels:
        app: bibliotheque-backend
    spec:
      containers:
      - name: bibliotheque-backend
        image: isaolivia/ma-bibliothequekub:latest
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 250m
            memory: 64Mi
        livenessProbe:
          httpGet:
            path: /health/live
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
