k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bibliotheque-backend
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30000
  selector:
    app: bibliotheque-backend
